--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"classnames": "^2.3.1",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"react-icons": "^4.4.0",
 		"react-scripts": "5.0.1",
 		"sass": "^1.52.2",
 		"zustand": "^4.0.0-rc.1"
